Working on Int32.ToString()

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>ILCompiler</AssemblyName>
+    <RootNamespace>ILCompiler</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
