Added support for method arguments.

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Mono.Cecil" Version="0.11.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Documentation\" />
+  </ItemGroup>
+
 </Project>
