--- a/Platform.C64/Platform.C64/Platform.C64.csproj
+++ b/Platform.C64/Platform.C64/Platform.C64.csproj
@@ -1,13 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Platform.C64\Platform.C64\Platform.C64.csproj" />
-  </ItemGroup>
 
 </Project>
